--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-   
-    <input onClick="shuffle8();save8();window.location.href='p1.html'" type="button" style="width:600px;height:200px;font-size:40px;" value="8人局"><p>
-    <input onClick="shuffle9();save9();window.location.href='p1.html'" type="button" style="width:600px;height:200px;font-size:40px;" value="9人局"><p>
-    <input onClick="shuffle10();save10();window.location.href='p1.html'" type="button" style="width:600px;height:200px;font-size:40px;" value="10人局"><p>
-    <input onClick="see()" type="button" style="width:600px;height:200px;font-size:40px;" value="看結果"><p>
-    <script src="main.js"></script>
+
+    <input onClick="shuffle8();save8();run1();" type="button" style="width:600px;height:200px;font-size:40px;" value="8人局"><p>
+    <input onClick="shuffle9();save9();run1();" type="button" style="width:600px;height:200px;font-size:40px;" value="9人局"><p>
+    <input onClick="shuffle10();save10();run1();" type="button" style="width:600px;height:200px;font-size:40px;" value="10人局"><p>
+
+    <script src="scripts/main.js"></script>
   </body>
 </html> 
