--- a/p1.html
+++ b/p1.html
@@ -7,11 +7,11 @@
   </head>
   <body>
    
-    <h1>1號玩家</h1><p>
-    <input onClick="set1()" type="button" style="width:1000px;height:500px;font-size:300px;" value="看角色"><p>
-    <div id="text" style="width:1000px;height:400px;font-size:150px;"></div>
-    <input onClick="window.location.href='p2.html'" type="button" style="width:1000px;height:500px;font-size:300px;" value="下一位"><p>
-    <script src="main.js"></script>
+    <h1 style="width:600px;height:100px;font-size:80px;">1號玩家</h1><p>
+    <input onClick="set1()" type="button" style="width:800px;height:400px;font-size:100px;" value="看角色"><p>
+    <div id="text" style="width:800px;height:400px;font-size:100px;"></div>
+    <input onClick="run2()" type="button" style="width:800px;height:200px;font-size:100px;" value="下一位"><p>
 
+    <script src="scripts/main.js"></script>
   </body>
 </html> 
