--- a/p10.html
+++ b/p10.html
@@ -7,11 +7,11 @@
   </head>
   <body>
    
-    <h1>10號玩家</h1><p>
-    <input onClick="set10()" type="button" style="width:600px;height:200px;font-size:40px;" value="看角色"><p>
-    <div id="text" style="width:600px;height:50px;font-size:20px;"></div>
-    <input onClick="window.location.href='index.html'" type="button" style="width:600px;height:200px;font-size:40px;" value="下一位"><p>
-    <script src="main.js"></script>
-
+    <h1 style="width:600px;height:100px;font-size:80px;">10號玩家</h1><p>
+    <input onClick="set10()" type="button" style="width:800px;height:400px;font-size:100px;" value="看角色"><p>
+    <div id="text" style="width:800px;height:400px;font-size:100px;"></div>
+    <input onClick="runover()" type="button" style="width:800px;height:200px;font-size:100px;" value="下一位"><p>
+    
+    <script src="scripts/main.js"></script>
   </body>
 </html> 
