--- a/over.html
+++ b/over.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     
-    <image src="images/avalon.jpg" style="width:800px;height:400px;"><p><br><br><br><br><br><br><br><br>
-    <input onClick="see();runindex()" type="button" style="width:600px;height:200px;font-size:40px;" value="看結果">
+    <image src="images/avalon.jpg" style="width:100%;height:30%;"><p><br><br><br><br><br><br><br><br>
+    <input onClick="see();runindex()" type="button" style="width:100%;height:200px;font-size:40px;" value="看結果">
   
     <script src="scripts/main.js"></script>
   </body>
