--- a/p10.html
+++ b/p10.html
@@ -10,7 +10,7 @@
     <div style="width:100%;height:100px;font-size:80px;text-align:center;">10號玩家</div><p>
     <input onClick="set10()" type="button" style="width:100%;height:400px;font-size:100px;" value="看角色"><p>
     <div id="text" style="width:100%;height:400px;font-size:100px;"></div>
-    <input onClick="runover()" type="button" style="width:100%;height:200px;font-size:100px;" value="下一位"><p>
+    <input class="r" onClick="runover()" type="button" style="width:100%;height:200px;font-size:100px;" value="記住了"><p>
     
     <script src="scripts/main.js"></script>
   </body>
