--- a/p7.html
+++ b/p7.html
@@ -10,7 +10,7 @@
     <div style="width:100%;height:100px;font-size:80px;text-align:center;">7號玩家</div><p>
     <input onClick="set7()" type="button" style="width:100%;height:400px;font-size:100px;" value="看角色"><p>
     <div id="text" style="width:100%;height:400px;font-size:100px;"></div>
-    <input onClick="run8()" type="button" style="width:100%;height:200px;font-size:100px;" value="下一位"><p>
+    <input class="r" onClick="run8()" type="button" style="width:100%;height:200px;font-size:100px;" value="記住了"><p>
 
     <script src="scripts/main.js"></script>
   </body>
