--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
 
-    <input onClick="shuffle8();save8();run1();" type="button" style="width:100%;height:30%;font-size:30vh;" value="8人局"><p>
-    <input onClick="shuffle9();save9();run1();" type="button" style="width:100%;height:30%;font-size:30vh;" value="9人局"><p>
-    <input onClick="shuffle10();save10();run1();" type="button" style="width:100%;height:30%;font-size:30vh;" value="10人局"><p>
+    <input onClick="shuffle8();save8();run1();" type="button" style="width:100%;height:100%;font-size:100%;" value="8人局"><p>
+    <input onClick="shuffle9();save9();run1();" type="button" style="width:100%;height:100%;font-size:100%;" value="9人局"><p>
+    <input onClick="shuffle10();save10();run1();" type="button" style="width:100%;height:100%;font-size:100%;" value="10人局"><p>
 
     <script src="scripts/main.js"></script>
   </body>
