--- a/over.html
+++ b/over.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     
-    <image src="images/avalon.jpg" style="width:100%;height:30%;"><p><br><br><br><br><br><br><br><br>
-    <input class="r" onClick="see();runindex()" type="button" style="width:100%;height:25%;font-size:100px;" value="看結果">
+    <image src="images/avalon.jpg" style="width:100%;height:30%;"><p>
+    <input class="r" onClick="see();runindex()" type="button" style="width:100%;height:25%;font-size:100px;" value="看結果"><p>
   
     <script src="scripts/main.js"></script>
   </body>
