--- a/p1.html
+++ b/p1.html
@@ -6,9 +6,9 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-   
+    
     <div style="width:100%;height:100px;font-size:80px;text-align:center;">1號玩家</div><p>
-    <input onClick="set1()" type="button" style="width:100%;height:400px;font-size:100px;" value="看角色"><p>
+    <img onClick="set1()" type="button" src="images/card.jpg" style="display:block; margin:auto;"><p>
     <div id="text" style="width:100%;height:400px;font-size:100px;"></div>
     <input class="r" onClick="run2()" type="button" style="width:100%;height:200px;font-size:100px;" value="記住了" position:relative;><p>
 
