--- a/p1.html
+++ b/p1.html
@@ -8,9 +8,9 @@
   <body>
     
     <div style="width:100%;height:100px;font-size:80px;text-align:center;">1號玩家</div><p>
-    <img onClick="set1()" type="button" src="images/card.jpg" style="display:block; margin:auto;"><p>
+    <img id="img" src="images/card.jpg" onClick="set1();" type="button" style="width:660px;height:900px;display:block; margin:auto;"><p>
     <div id="text" style="width:100%;height:400px;font-size:100px;"></div>
-    <input class="r" onClick="run2()" type="button" style="width:100%;height:200px;font-size:100px;" value="記住了" position:relative;><p>
+    <input id="input" class="r" onClick="set1();" type="button" style="width:100%;height:200px;font-size:100px;" value="看角色" position:relative;><p>
 
     <script src="scripts/main.js"></script>
   </body>
