--- a/p8.html
+++ b/p8.html
@@ -8,9 +8,9 @@
   <body>
    
     <div style="width:100%;height:100px;font-size:80px;text-align:center;">8號玩家</div><p>
-    <input onClick="set8()" type="button" style="width:100%;height:400px;font-size:100px;" value="看角色"><p>
+    <img id="img" src="images/card.jpg" onClick="set8();" type="button" style="width:660px;height:900px;display:block; margin:auto;"><p>
     <div id="text" style="width:100%;height:400px;font-size:100px;"></div>
-    <input class="r" onClick="back8()" type="button" style="width:100%;height:200px;font-size:100px;" value="記住了"><p>
+    <input id="input" class="r" onClick="set8();" type="button" style="width:100%;height:200px;font-size:100px;" value="看角色" position:relative;><p>
     
     <script src="scripts/main.js"></script>
   </body>
