--- a/p1.html
+++ b/p1.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     
-    <div style="width:100%;height:100px;font-size:80px;text-align:center;">1號玩家</div><p>
-    <img id="img" src="images/card.jpg" onClick="set1();" type="button" style="width:660px;height:900px;display:block; margin:auto;"><p>
-    <div id="text" style="width:100%;height:400px;font-size:100px;"></div>
-    <input id="input" class="r" onClick="set1();" type="button" style="width:100%;height:200px;font-size:100px;" value="看角色" position:relative;><p>
+    <div style="width:100vw;height:15vh;font-size:10vh;text-align:center;">1號玩家</div><p>
+    <img id="img" src="images/card.jpg" onClick="set1();" type="button" style="width:66vw;height:90vh;display:block; margin:auto;"><p>
+    <div id="text" style="width:100vw;height:15vh;font-size:10vh;"></div>
+    <input id="input" class="r" onClick="set1();" type="button" style="width:100vw;height:15vh;font-size:10vh;" value="看角色" position:relative;><p>
 
     <script src="scripts/main.js"></script>
   </body>
