--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
 
-    <input class="t" onClick="shuffle8();save8();run1();" type="button" style="width:100vw;height:30vh;font-size:25vh;" value="8人局"><p>
-    <input class="c" onClick="shuffle9();save9();run1();" type="button" style="width:100vw;height:30vh;font-size:25vh;" value="9人局"><p>
-    <input class="r" onClick="shuffle10();save10();run1();" type="button" style="width:100vw;height:30vh;font-size:25vh;" value="10人局"><p>
+    <input class="t" onClick="shuffle8();save8();run1();" type="button" style="width:100vw;height:30vmin;font-size:25vmin;" value="8人局"><p>
+    <input class="c" onClick="shuffle9();save9();run1();" type="button" style="width:100vw;height:30vmin;font-size:25vmin;" value="9人局"><p>
+    <input class="r" onClick="shuffle10();save10();run1();" type="button" style="width:100vw;height:30vmin;font-size:25vmin;" value="10人局"><p>
 
     <script src="scripts/main.js"></script>
   </body>
