--- a/p1.html
+++ b/p1.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     
-    <div style="width:100vw;height:15vh;font-size:10vh;text-align:center;">1號玩家</div><p>
-    <img id="img" src="images/card.jpg" onClick="set1();" type="button" style="width:50vw;height:50vh;display:block; margin:auto;"><p>
-    <div id="text" style="width:100vw;height:15vh;font-size:10vh;"></div>
-    <input id="input" class="r" onClick="set1();" type="button" style="width:100vw;height:15vh;font-size:10vh;" value="看角色" position:relative;><p>
+    <div style="width:100vw;height:5vh;font-size:5vh;text-align:center;">1號玩家</div><p>
+    <img id="img" src="images/card.jpg" onClick="set1();" type="button" style="width:35vw;height:20vh;display:block;margin:auto;"><p>
+    <div id="text" style="width:100vw;height:5vh;font-size:5vh;"></div>
+    <input id="input" class="a" onClick="set1();" type="button" style="width:100vw;height:5vh;font-size:5vh;" value="看角色"><p>
 
     <script src="scripts/main.js"></script>
   </body>
