--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
 
-    <input class="rwdtxt t" onClick="shuffle8();save8();run1();" type="button" style="width:100vw;height:30vh;" value="8人局"><p>
-    <input class="rwdtxt c" onClick="shuffle9();save9();run1();" type="button" style="width:100vw;height:30vh;" value="9人局"><p>
-    <input class="rwdtxt b" onClick="shuffle10();save10();run1();" type="button" style="width:100vw;height:30vh;" value="10人局"><p>
+    <input class="rwdtxt t" onClick="shuffle8();save8();run1();" type="button" style="width:100vw;height:30vh;" value="8人局">
+    <input class="rwdtxt c" onClick="shuffle9();save9();run1();" type="button" style="width:100vw;height:30vh;" value="9人局">
+    <input class="rwdtxt b" onClick="shuffle10();save10();run1();" type="button" style="width:100vw;height:30vh;" value="10人局">
 
     <script src="scripts/main.js"></script>
   </body>
