--- a/p1.html
+++ b/p1.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     
-    <div class="rwdtxt" style="width:100vw;text-align:center;">1號玩家</div><p>
-    <img id="img" src="images/card.jpg" onClick="set1();" type="button" style="width:660px;height:900px;display:block;margin:auto;"><p>
+    <div class="rwdtxt" style="width:100vw;text-align:center;">1號玩家</div>
+    <img id="img" src="images/card.jpg" onClick="set1();" type="button" style="width:660px;height:900px;display:block;margin:auto;">
     <div id="text" class="rwdtxt" style="width:100vw;"></div>
-    <input id="input" class="rwdtxt b" onClick="set1();" type="button" style="width:100vw;" value="看角色"><p>
+    <input id="input" class="rwdtxt b" onClick="set1();" type="button" style="width:100vw;" value="看角色">
 
     <script src="scripts/main.js"></script>
   </body>
