--- a/over.html
+++ b/over.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     
-    <image src="images/avalon.jpg" style="width:100vw;">
+    <image class="t" src="images/avalon.jpg" style="width:100vw;">
     <input class="rwdtxt b" onClick="see();runindex()" type="button" style="width:100vw;" value="看結果">
   
     <script src="scripts/main.js"></script>
